# osr-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: evals.md  foundry-capabilities.md  index.md  licensing.md  phase-0-plan.md  phase-1-plan.md  phase-2-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  spec.md
docs/contributing/: architecture.md  index.md  testing.md
docs/getting-started/: first-conversion.md  install.md
docs/guides/: correction-loop.md  owner-sampling.md  provider-setup.md  settings-and-rerun.md
docs/reference/: cli.md  glossary.md  workdir-artifacts.md
src/osrforge/: __init__.py  assemble.py  check.py  cli.py  content.py  convert.py  errors.py  estimate.py  evals.py  geometry.py  monsters.py  overrides.py  pages.py  preprocess.py  previews.py  settings.py  survey.py  versioning.py  workdir.py
src/osrforge/contracts/: __init__.py  overrides.py  report.py  run.py  stages.py
src/osrforge/providers/: __init__.py  base.py  fixtures.py  foundry.py
tests/: conftest.py  test_artifacts.py  test_assemble.py  test_check.py  test_cli.py  test_content.py  test_convert.py  test_credibility_floor.py  test_emission.py  test_estimate.py  test_evals.py  test_extract_replay.py  test_foundry.py  test_geometry.py  test_jn1_chain.py  test_minimod_pipeline.py  test_monsters.py  test_osrlib_compat.py  test_overrides.py  test_overrides_apply.py  test_pages.py  test_playability.py  test_preprocess.py  test_previews.py  test_providers.py  test_report.py  test_rerun.py  test_run.py  test_spike_fixtures.py  test_stages_contracts.py  test_survey.py  test_track_stage.py  test_versioning.py  test_workdir.py
tests/assets/: README.md
tests/assets/chaotic-caves/: .gitignore  README.md  overrides.yaml
tests/assets/chaotic-caves/expected/: adventure.json  report.json
tests/assets/chaotic-caves/expected-corrected/: adventure.json  report.json
tests/assets/chaotic-caves/fixtures/: probe.auth-entra.1e724e366641.json  probe.auth-key.83c010a197a4.json  probe.auth.0db85d35badf.json  probe.context-48pages.4d8ffa664661.json  probe.dpi-cost-100.5fe1c96f4bfa.json  probe.dpi-cost-150.38e246aebd07.json  probe.dpi-cost-200.a271dc5f4182.json  probe.extract-content.d3775d07f58d.json  probe.extract-survey.eeab23eaebe1.json  probe.image-count-01.848a5bf2bbc6.json  probe.image-count-04.1c27ffebd91c.json  probe.image-count-08.096447d07d9b.json  probe.image-count-16.2993f299d33d.json  probe.image-count-32.ea5c7bd092ee.json  probe.schema-stress-e128-d4.ee897a6fc4b8.json  probe.survey-schema.417e611b3398.json  (+3 more)
tools/docs/: gen_api_reference.py  gen_vocabulary.py
tools/eval/: AUTHORING.md  README.md  run_eval.py  scoreboard.json
tools/eval/corpus/: scoreboard.json
tools/extract/: README.md  run_converted_tui.py  run_extraction.py
tools/minimod/: generate_minimod.py
tools/release/: check_dist.py  install_smoke.py
tools/spike/: README.md  probes.py
typings/pypdfium2/: __init__.pyi
(+78 files in other folders)
