[project]
name = "osr-forge"
version = "0.1.0"
description = "Convert tabletop adventure module PDFs into playable osrlib Adventure documents."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marsh Macy" }]
requires-python = ">=3.14"
keywords = [
    "bx",
    "osr",
    "ttrpg",
    "adventure-module",
    "pdf-conversion",
    "llm",
    "osrlib",
    "dungeon",
    "old-school-essentials",
]
# Python :: 3.14 only — the version CI tests (osrlib's rule); no License ::
# classifier beside the SPDX expression, per PEP 639.
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Typing :: Typed",
]
dependencies = [
    "osrlib>=1.2,<2",
    "pydantic>=2",
    "pypdfium2>=5",
    "pillow>=11",
    "pyyaml>=6",
    "jsonschema>=4",
    "openai>=2.44",
]

[project.optional-dependencies]
entra = ["azure-identity>=1"]

[project.scripts]
osrforge = "osrforge.cli:main"

[project.urls]
Repository = "https://github.com/mmacy/osr-forge"
Documentation = "https://mmacy.github.io/osr-forge/"
Issues = "https://github.com/mmacy/osr-forge/issues"
Changelog = "https://github.com/mmacy/osr-forge/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.11",
    "pyright>=1.1",
    "types-pyyaml>=6.0.12.20260518",
    "types-jsonschema>=4.26.0.20260518",
    "azure-identity>=1.25.3",
    { include-group = "docs" },
]
# The documentation site's toolchain (mkdocs-material + mkdocstrings and the
# build-time page generators); included by dev so `uv sync` stays one command.
# gen-files and literate-nav are pinned exactly: their next releases (0.6.1 and
# 0.6.3) depend on `properdocs`, an unvetted mkdocs fork that ships an import
# hook redirecting all mkdocs.* imports to itself. Do not bump either pin
# without inspecting the release's dependency set first.
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "osrforge"

[tool.ruff]
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "B", "SIM", "RUF"]
ignore = [
    "D105", # missing docstring in magic method — __str__ and friends are self-evident
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"tools/**" = ["D"]

[tool.ruff.lint.isort]
known-first-party = ["osrforge"]

[tool.pyright]
pythonVersion = "3.14"
include = ["src", "tests"]
typeCheckingMode = "standard"
strict = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
